# me-recorda-bot

./: .gitignore  COPYRIGHT  Cargo.toml  flake.nix
migrations/: 20241029152424_InitialMigration.sql  20241030001735_AddWhenSendIndex.sql  20241030005925_Id_type_fix.sql
src/: main.rs
