[package]
name = "me-recorda-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-english = "0.1.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "sqlite"] }
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.41.0", features = ["full"] }
futures-util = "0.3.31"